[package]
name = "wow_serdes"
version = "0.1.0"
edition = "2021"

[lib]
name = "wow_serdes"

[[bin]]
name = "wow"
path = "src/bin/wow.rs"

[dependencies]
cbor = "0.4.1"
devtimer = "3.0.0"
image = "0.24"
rustc-serialize = "0.3.24"
serde_json = "1.0.94"
tokio = {version = "1.23.0", features = ["full"]}
win-screenshot = "3.0.1"
winapi = { version = "0.3", features = ["winuser"] }
windows = { version = "0.37", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps"] }
tts = {version = "0.25.5", features = ["tolk"]}

[profile.dev.package.win-screenshot]
opt-level = 3

[profile.dev.package.tts]
opt-level = 3
