[package]
name = "screenshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
windows = { version = "0.37", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps"] }
win-screenshot = "2.0.0"
cbor = "0.4.1"
rustc-serialize = "0.3.24"
devtimer = "3.0.0"
buttplug = "6.3.0"
tokio = "1.23.0"
anyhow = "1.0.68"
buttplug_derive = "0.7.0"
futures = "0.3.25"
futures-util = "0.3.25"
